--- a/GestionDeStage/GestionDeStage/GestionDeStage.csproj
+++ b/GestionDeStage/GestionDeStage/GestionDeStage.csproj
@@ -45,11 +45,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AjoutModifStage.cs">
+    <Compile Include="FormAjoutModif.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="AjoutModifStage.Designer.cs">
-      <DependentUpon>AjoutModifStage.cs</DependentUpon>
+    <Compile Include="FormAjoutModif.Designer.cs">
+      <DependentUpon>FormAjoutModif.cs</DependentUpon>
     </Compile>
     <Compile Include="FormErreur.cs">
       <SubType>Form</SubType>
@@ -65,8 +65,8 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="AjoutModifStage.resx">
-      <DependentUpon>AjoutModifStage.cs</DependentUpon>
+    <EmbeddedResource Include="FormAjoutModif.resx">
+      <DependentUpon>FormAjoutModif.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormErreur.resx">
       <DependentUpon>FormErreur.cs</DependentUpon>
